# hermes-kanban

./: .gitignore  EXECUTION.md  pyproject.toml
.github/workflows/: build.yml  release.yml
cli/hermes_kanban_sqlite/: cli.py  database.py  kanban.py  sync.py  tui.py  usage.py
docs/: API.md  README.md
plugin/: main.js  manifest.json  package-lock.json  package.json  versions.json
plugin/src/: kanban-parser.ts  main.ts  mcp-adapter.ts  notification.ts  server.ts  settings.ts
scripts/: brat-submission.md
tests/: test_cli.py  test_database.py  test_kanban.py  test_sync.py  test_usage.py
tests/e2e/: __init__.py  mock_api_server.py  test_cli_workflows.py  test_mock_api_integration.py  test_tui_smoke.py
