[project]
name = "hermes-kanban-sqlite"
version = "1.8.0"
description = "SQLite-backed Kanban CLI/TUI — real-time operational layer for hermes-kanban"
readme = "docs/README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47",
    "click>=8.1",
]

[project.entry-points."hermes_agent.plugins"]
kanban = "hermes_kanban_sqlite.hermes_plugin:register"

[project.scripts]
hermes-kanban-sqlite = "hermes_kanban_sqlite.cli:main"

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "cli"}

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: End-to-end tests (requires real CLI binary subprocess or mock server)",
    "tui: TUI smoke tests (requires PTY/TTY)",
]

[tool.coverage.run]
source = ["cli/hermes_kanban_sqlite"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
